# VisCore

./: .editorconfig  CMakeLists.txt  README.md
Classes/Buffer/: ConstraintBuffer.h  DynamicBuffer.h  StreamingBuffer.h
Include/Buffer/: Buffer.h  BufferType.h
Include/File/: FileAccess.h  FileMode.h  FileType.h
Include/Streaming/: SeekMode.h  Streaming.h
Source/Buffer/: Buffer.cpp  ConstraintBuffer.cpp  DynamicBuffer.cpp  StreamingBuffer.cpp
Test/Include/: TestBuffer.h
Test/Source/: TestBuffer.cpp  main.cpp
